--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrogram>=2.0.30
+git+https://github.com/subinps/pyrogram@inline-m
 tgcrypto
 pymongo[srv]==3.12.3
 motor==2.5.1
@@ -7,3 +7,4 @@ umongo==3.0.1
 requests
 bs4
 imdbpy==2021.4.18
+aiohttp
